--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -126,5 +126,8 @@
 
     <script src="data.js"></script>
     <script src="user-dashboard-script.js"></script>
+    <script src="config/gemini-config.js"></script>
+    <script src="services/gemini-api.js"></script>
+    <script src="chatbot.js"></script>
 </body>
 </html>
