final skeleton commit

--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -6,7 +6,7 @@
     <title>TELUS Digital - Admin Dashboard</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="dashboard">
     <!-- Header -->
     <header class="telus-header admin-header">
         <div class="container">
