--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
-<body>
+<body class="dashboard">
     <!-- Left Navigation Sidebar -->
     <nav class="sidebar">
         <div class="sidebar-header">
             <div class="logo-container">
-                <img src="https://via.placeholder.com/120x40/4B286D/ffffff?text=TELUS" alt="TELUS Logo" class="logo">
+                <img src="images/telus-logo.png" alt="TELUS Logo" class="logo">
             </div>
         </div>
         
