--- a/help-support.html
+++ b/help-support.html
@@ -12,7 +12,7 @@
     <nav class="sidebar">
         <div class="sidebar-header">
             <div class="logo-container">
-                <img src="https://via.placeholder.com/120x40/4B286D/ffffff?text=TELUS" alt="TELUS Logo" class="logo">
+                <img src="images/telus-logo.png" alt="TELUS Logo" class="logo">
             </div>
         </div>
         
