--- a/index.html
+++ b/index.html
@@ -7,21 +7,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Header -->
-    <header class="telus-header">
-        <div class="container">
-            <div class="telus-logo">
-                <span class="telus-brand">TELUS</span>
-                <span class="telus-digital">Digital</span>
-            </div>
-        </div>
-    </header>
-
     <!-- Main Content -->
     <main class="main-content">
         <div class="container">
             <div class="login-container">
                 <div class="welcome-card">
+                    <div class="login-logo-container">
+                        <img src="images/telus-logo.png" alt="TELUS Logo" class="login-logo">
+                    </div>
                     <h1 class="welcome-title">Welcome!</h1>
                     <p class="welcome-subtitle">Choose your login type to continue</p>
                     
@@ -88,17 +81,6 @@
             </div>
         </div>
     </main>
-
-    <!-- Footer -->
-    <footer class="telus-footer">
-        <div class="container">
-            <p>2025 TELUS Digital</p>
-            <div class="footer-links">
-                <a href="#">All rights reserved</a>
-                <a href="#">Terms of Use</a>
-            </div>
-        </div>
-    </footer>
 
     <script src="data.js"></script>
     <script src="landing-script.js"></script>
