--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
     </main>
 
     <script src="data.js"></script>
+    <script src="config/gemini-config.js"></script>
+    <script src="services/gemini-api.js"></script>
+    <script src="chatbot.js"></script>
     <script src="landing-script.js"></script>
 </body>
 </html>
