pre final commit

--- a/help-support.html
+++ b/help-support.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TELUS Digital - Help & Support</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="user-styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body class="dashboard">
@@ -31,15 +31,15 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="expertise-hub.html" class="nav-link">
-                        <span class="nav-icon"><i class="fas fa-bullseye"></i></span>
-                        <span class="nav-text">Expertise Hub</span>
-                    </a>
-                </li>
-                <li class="nav-item">
                     <a href="documents.html" class="nav-link">
                         <span class="nav-icon"><i class="fas fa-file-alt"></i></span>
                         <span class="nav-text">Documents</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="expertise-hub.html" class="nav-link">
+                        <span class="nav-icon"><i class="fas fa-users"></i></span>
+                        <span class="nav-text">Expertise Hub</span>
                     </a>
                 </li>
                 <li class="nav-item">
