pre 2 final comit

--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TELUS Digital - Admin Dashboard</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="user-styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body class="dashboard admin-dashboard">
@@ -425,9 +425,6 @@
     <script src="sync-manager.js"></script>
     <script src="data.js"></script>
     <script src="admin-dashboard-script.js"></script>
-    <script src="config/gemini-config.js"></script>
-    <script src="services/gemini-api.js"></script>
-    <script src="chatbot.js"></script>
     <script>
         function toggleProfileMenu() {
             const menu = document.getElementById('profileMenu');
