new user pre live fnal commit

--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -228,17 +228,18 @@
                     
                     <div class="management-table-container">
                         <table class="management-table">
-                            <thead>
-                                <tr>
-                                    <th>Task Title</th>
-                                    <th>Assigned User</th>
-                                    <th>Priority</th>
-                                    <th>Status</th>
-                                    <th>Due Date</th>
-                                    <th>Completion Date</th>
-                                    <th>Actions</th>
-                                </tr>
-                            </thead>
+                                <thead>
+                                    <tr>
+                                        <th>ID</th>
+                                        <th>Name</th>
+                                        <th>Email</th>
+                                        <th>POD</th>
+                                        <th>Role</th>
+                                        <th>Status</th>
+                                        <th>Date Added</th>
+                                        <th>Actions</th>
+                                    </tr>
+                                </thead>
                             <tbody id="tasksTableBody">
                                 <!-- Tasks will be loaded here -->
                             </tbody>
