--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -58,8 +58,8 @@
                         <i class="fas fa-user"></i>
                     </div>
                     <div class="profile-info">
-                        <span class="profile-name">John Doe</span>
-                        <span class="profile-role">Product Design Intern</span>
+                        <span class="profile-name" id="profileName">John Doe</span>
+                        <span class="profile-role" id="profileRole">Product Design Intern</span>
                     </div>
                     <span class="profile-arrow"><i class="fas fa-chevron-up"></i></span>
                 </div>
