--- a/index.html
+++ b/index.html
@@ -88,6 +88,13 @@
         </div>
     </main>
 
+    <!-- Supabase Client Library -->
+    <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
+    
+    <!-- Application Configuration and Services -->
+    <script src="config/supabase-config.js"></script>
+    <script src="services/supabase-service.js"></script>
+    <script src="services/migration-service.js"></script>
     <script src="data.js"></script>
     
     <!-- Gemini AI Dependencies -->
