--- a/signup.html
+++ b/signup.html
@@ -66,6 +66,14 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    
+    <!-- Supabase Client Library -->
+    <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
+    
+    <!-- Application Configuration and Services -->
+    <script src="config/supabase-config.js"></script>
+    <script src="services/supabase-service.js"></script>
+    <script src="services/migration-service.js"></script>
     <script src="signup-script.js"></script>
 </body>
 </html>
