--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -316,6 +316,13 @@
         </div>
     </div>
 
+    <!-- Supabase Client Library -->
+    <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
+    
+    <!-- Application Configuration and Services -->
+    <script src="config/supabase-config.js"></script>
+    <script src="services/supabase-service.js"></script>
+    <script src="services/migration-service.js"></script>
     <script src="sync-manager.js"></script>
     <script src="data.js"></script>
     <script src="user-dashboard-script.js"></script>
